a few more things, but now realize this is a job for webGPU and not wasm

--- a/index.html
+++ b/index.html
@@ -12,13 +12,8 @@
   <div id="app"></div>
   <script type="module" src="/src/scene.ts"></script>
   <script>
-    function run_wasm() {
-      WebAssembly.instantiateStreaming(fetch("src/wasm/test.wasm"), {}).then(results => {
-        console.log("ayooo, it works!")
-      })
-    }
   </script>
-  <button onclick="run_wasm()">run</button>
+  <label id="fps"></label>
 </body>
 
 </html>
