--- a/index.html
+++ b/index.html
@@ -3,17 +3,13 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + TS</title>
+  <title>SPH</title>
 </head>
 
 <body>
-  <div id="app"></div>
   <script type="module" src="/src/scene.ts"></script>
-  <script>
-  </script>
-  <label id="fps"></label>
 </body>
 
 </html>
