--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>SPH</title>
+  <title>WebGPU SPH</title>
 </head>
 
 <body>
