Improved HTML Layout and setup up struct of array buffers and layouts for improved performance. Committing before undergoing major rework

--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link />
+  <link rel="" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>WebGPU SPH</title>
+  <title>SwashGPU</title>
 </head>
 
 <body>
+  <div class="main-container">
+    <h1>SwashGPU</h1>
+    <p>Click/Press and drag to stir the fluid.</p>
+    <canvas id="simulationCanvas"></canvas>
+  </div>
   <script type="module" src="/src/scene.ts"></script>
 </body>
 
