en route to working GPU sorting

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <p>Click/Press and drag to stir the fluid.</p>
     <canvas id="simulationCanvas"></canvas>
   </div>
-  <script type="module" src="/src/scene.ts"></script>
+  <script type="module" src="/src/sortTest.ts"></script>
 </body>
 
 </html>
